rename files to be aware of strange sorting mess

--- a/ansible/install_lab.yaml
+++ b/ansible/install_lab.yaml
@@ -2,9 +2,9 @@
 - name: Setup GUID
   hosts: all
   roles:
-    - 1_SETUP_GUID
+    - A_SETUP_GUID
 
 - name: Prerequisite checks
   hosts: nodes, nfs
   roles:
-    - 2_PREREQ_CHECKS
+    - B_PREREQ_CHECKS
