add more homework lab automation
- check whether nfs is exporting stuff or not
- add check and if needed installation of openstack cli and openstack
installer.

--- a/ansible/install_lab.yaml
+++ b/ansible/install_lab.yaml
@@ -8,3 +8,8 @@
   hosts: nodes, nfs
   roles:
     - B_PREREQ_CHECKS
+
+- name: Install Req Packages on bastion
+  hosts: localhost
+  roles:
+    - C_INSTALL_REQUIREMENTS
