fix lineinfile foo

--- a/ansible/roles/SETUP_GUID/tasks/main.yml
+++ b/ansible/roles/SETUP_GUID/tasks/main.yml
@@ -15,7 +15,8 @@
   setup:
     filter: ansible_local
 
-- lineinfile:
+- name: set guid if not done yet 
+  lineinfile:
     path: /root/.bash_profile
     regexp: '^GUID=.*'
     line: "GUID={{ ansible_local['guid'] }}"
