implement host inventory creation by template

--- a/ansible/install_lab.yaml
+++ b/ansible/install_lab.yaml
@@ -13,3 +13,8 @@
   hosts: localhost
   roles:
     - INSTALL_REQUIREMENTS
+
+- name: Write target inventory file
+  hosts: localhost
+  role:
+    - CREATE_HOST_FILE
