--- a/ansible/roles/POST_DEPLOY_TASKS/tasks/main.yml
+++ b/ansible/roles/POST_DEPLOY_TASKS/tasks/main.yml
@@ -1,1 +1,18 @@
 ---
+- name: fetch kube config from masters
+  fetch:
+    src: /root/.kube/config
+    dst: /root/.kube/config
+    flat: yes
+    tags: check-role
+  when: "'masters' in group_names"
+
+- name: check system:admin
+  shell: oc whoami
+  when: "inventory_hostname == 'localhost'"
+  tags: check-role
+
+- name: check nodes
+  shell: oc get nodes
+  when: "inventory_hostname == 'localhost'"
+  tags: check-role
