--- a/ansible/roles/POST_DEPLOY_TASKS/tasks/main.yml
+++ b/ansible/roles/POST_DEPLOY_TASKS/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: fetch kube config from masters
   fetch:
     src: /root/.kube/config
-    dst: /root/.kube/config
+    dest: /root/.kube/config
     flat: yes
     tags: check-role
   when: "'masters' in group_names"
