add pv creation stuff

--- a/ansible/install_lab.yaml
+++ b/ansible/install_lab.yaml
@@ -34,3 +34,8 @@
   hosts: localhost
   roles:
     - TEST_DEPLOYMENT
+
+- name: create pvs and all depended stuff
+  hosts: nfs,localhost
+  roles:
+    - PV_CREATION
