--- a/ansible/roles/PV_CREATION/tasks/main.yml
+++ b/ansible/roles/PV_CREATION/tasks/main.yml
@@ -1,1 +1,30 @@
 ---
+- name: creeate needed nfs directories
+  template: src=create_nfs_pv_directories.sh.j2 dest=/root/create_nfs_pv_directories.sh mode=0770
+  when: "'nfs' in group_names"
+  tags: pv-creation
+
+- name: run pv directories creation script
+  shell: /root/create_nfs_pv_directories.sh
+  when: "'nfs' in group_names"
+  tags: pv-creation
+
+- name: create 5gigs pvs
+  host: localhost
+  template: src=create_pvs_5gigs.sh.j2 dest=/root/create_pvs_5gigs.sh mode=0770
+  tags: pv-creation
+
+- name: create 10gigs pvs
+  host: localhost
+  template: src=create_pvs_10gigs.sh.j2 dest=/root/create_pvs_10gigs.sh mode=0770
+  tags: pv-creation
+
+- name: run 5gigs script
+  host: localhost
+  shell: /root/create_pvs_5gigs.sh
+  tags: pv-creation
+
+- name: run 10gigs script
+  host: localhost
+  shell: /root/create_pvs_10gigs.sh
+  tags: pv-creation
