use replace instead of create to prevent allready exists errors

--- a/ansible/roles/PV_CREATION/tasks/main.yml
+++ b/ansible/roles/PV_CREATION/tasks/main.yml
@@ -31,5 +31,5 @@
 
 - name: create pvs in openshift
   host: localhost
-  shell: cat /root/pvs/* | oc create -f -
+  shell: cat /root/pvs/* | oc replace -f -
   tags: pv-creation
