--- a/ansible/roles/CICD/tasks/main.yml
+++ b/ansible/roles/CICD/tasks/main.yml
@@ -1,1 +1,36 @@
 ---
+- name: create pipeline.yaml file
+  hosts: localhost
+  template: src=pipeline_template.yaml.j2 dest=/root/pipeline.yaml
+  tags: cicd-pipeline
+
+- name: create setup script
+  hosts: localhost
+  template: src=setup_cicd_simple.sh.j2 dest=/root/setup_cicd_simple.sh mode=0770
+  tags: cicd-pipeline
+
+- name: create readyness check skript
+  hosts: localhost
+  template: src=readynessCheck.sh.j2 dest=/root/readynessCheck.sh mode=0770
+  tags: cicd-pipeline
+
+- name: setup cicd
+  hosts: localhost
+  shell: /root/setup_cicd_simple.sh
+  tags: cicd-pipeline
+
+- name: import cicd pipeline definition
+  hosts: localhost
+  shell: oc replace -f pipeline.yaml -n cicd-dev
+  tags: cicd-pipeline
+
+- name: check readyness of jenkins
+  hosts: localhost
+  shell: /root/readynessCheck.sh
+  tags: cicd-pipeline
+
+- name: start build pipeline
+  hosts: localhost
+  shell: oc start-build os-pipeline -n cicd-dev
+  tags: cicd-pipeline
+
