add hpa for os-task dc in tasks-prod

--- a/ansible/roles/CICD/tasks/main.yml
+++ b/ansible/roles/CICD/tasks/main.yml
@@ -34,3 +34,6 @@
   shell: oc start-build os-pipeline -n cicd-dev
   tags: cicd-pipeline
 
+- name: add horizontal pod autoscaler
+  hosts: localhost
+  shell: oc autoscale dc/os-tasks --min 1 --max 10 --cpu-percent=80 -n tasks-prod
