--- a/ansible/roles/POST_DEPLOY_TASKS/tasks/main.yml
+++ b/ansible/roles/POST_DEPLOY_TASKS/tasks/main.yml
@@ -16,3 +16,13 @@
   shell: oc get nodes
   when: "inventory_hostname == 'localhost'"
   tags: check-role
+
+- name: add admin user to htpasswd
+  hosts: masters
+  shell: htpasswd -b /etc/origin/master/htpasswd admin r3dh4t1!
+  tags: add-admin
+
+- name: add cluster admin role to admin user
+  hosts: localhost
+  shell: oc adm policy add-cluster-role-to-user cluster-admin admin
+  tags: add-admin
