--- a/ansible/roles/MULTIPLE_CLIENTS/tasks/main.yml
+++ b/ansible/roles/MULTIPLE_CLIENTS/tasks/main.yml
@@ -1,24 +1,24 @@
 ---
 - name: add localhost seed hosts
+  hosts: localhost
   add_host:
     hostname: localhost
     groups:
       - seed-hosts
     ansible_connection: local
     ansible_host: localhost
-  when: "inventory_hostname == 'localhost'"
 
 - name: load inventory for client projects
+  hosts: localhost
   include_vars:
     dir: vars
     files_matching: seed-hosts.yml
-  when: "inventory_hostname == 'localhost'"
 
 - name: create projects, groups, and users
+  hosts: localhost
   import_role:
     name: OPENSHIFT-APPLIER
-  when: "inventory_hostname == 'localhost'"
 
 - name: create all users
+  hosts: masters
   script: addUsers.sh
-  when: "'masters' in group_names"
