--- a/ansible/install_lab.yaml
+++ b/ansible/install_lab.yaml
@@ -44,3 +44,8 @@
   hosts: localhost
   roles:
     - CICD
+
+- name: create multitenancy
+  hosts: masters,localhost
+  role:
+    - MULTIPLE_CLIENTS
