add another way to run htpasswd only on masters

--- a/ansible/roles/MULTIPLE_CLIENTS/tasks/main.yml
+++ b/ansible/roles/MULTIPLE_CLIENTS/tasks/main.yml
@@ -20,5 +20,5 @@
     name: OPENSHIFT-APPLIER
 
 - name: create all users
-  hosts: masters
   script: addUsers.sh
+  when: "'masters' in host_groups"
